Apply basic style

--- a/client/assets/stylesheets/common/_layout.scss
+++ b/client/assets/stylesheets/common/_layout.scss
@@ -4,7 +4,7 @@ $spacings: (
   "s": 0.5rem,
   "m": 1rem,
   "l": 1.25rem,
-  "xl", 1.5rem
+  "xl": 1.5rem
 );
 
 :root {
@@ -136,4 +136,3 @@ $spacings: (
 .flex-grow-1 {
   flex-grow: 1;
 }
-
